--- a/docs/examples/01.prerequisites.md
+++ b/docs/examples/01.prerequisites.md
@@ -4,7 +4,7 @@ The behavioral and instance layers of the `zitilib` models assume a number of pr
 
 This guide assumes that you're running `fablab` from a Linux (or Unix-like) environment. `fablab` is currently incubating support for execution from Windows hosts, but configuring that is beyond the scope of this guide.
 
-### Ziti
+## Ziti
 
 First, you'll need a build of Ziti that is compatible with linux environment expressed by the models. You can find a current build of Ziti at the following location:
 
@@ -24,13 +24,13 @@ I would recommend also including `ZITI_ROOT/bin` in your `PATH`:
 $ export PATH=$ZITI_ROOT/bin:$PATH
 ```
 
-### Terraform
+## Terraform
 
 The `zitilib` models all use `terraform` to express their infrastructure. You'll need to have a working `terraform` binary in your path in order to work with these models.
 
 https://www.terraform.io/
 
-### Building fablab
+## Building fablab
 
 Clone a copy of `fablab` into your usual location for cloned repositories. In these instructions, I've clone `fablab` into `~/Repos/nf/fablab`.
 
@@ -119,11 +119,11 @@ Flags:
 Use "fablab [command] --help" for more information about a command.
 ```
 
-### AWS Access
+## AWS Access
 
 You'll need AWS credentials that are capable of creating VPCs, instances, and the other items that are necessary to launch an environment on AWS. Make sure you've got your access and secret keys ready.
 
-### SSH Key in AWS
+## SSH Key in AWS
 
 You're going to want to have a named SSH key installed into each region where you plan to site resources. The `zitilib/examples/tiny` model uses the `us-east-1` region by default, so you'll at least need your named SSH key installed in that region.
 
@@ -137,7 +137,7 @@ $ ssh-add -l
 
 The `ssh-add -l` command should show the key that you've loaded. If this is not functioning, `fablab` will not work.
 
-### \~/.fablab/bindings.yml
+## \~/.fablab/bindings.yml
 
 Once you've got all of the above configured, you're ready to create your `~/.fablab/bindings.yml` file. The `bindings.yml` file is your "user preferences" for working with `fablab` models, and stores necessary configuration details to work with the `zitilib` instances.
 
@@ -163,7 +163,7 @@ Replace `mquigley` with the name of the SSH key that you configured into your AW
 
 Replace `key_path` with the path to your private key file for the SSH key you configured into AWS.
 
-### Ready
+## Ready
 
 With these prerequisites configured, you should be good to go.
 
