--- a/docs/examples/00.index.md
+++ b/docs/examples/00.index.md
@@ -1,6 +1,10 @@
 # Getting Started with the Examples
 
-This is a guide to getting up and running with the `zitilib` examples.
+`fablab` includes several pre-built models, which we will explore in this guide.
+
+The `zitilib/examples/tiny` model and the `zitilib/examples/smartrouting` model, both implement operational Ziti fabric overlays, perform fabric-native operational testing using the `loop2` tool, and provide data sets about mesh configuration and performance metrics.
 
 1. [Prerequisites](01.prerequisites.md)
 2. [Creating an Instance](02.creating.an.instance.md)
+3. A Tour of the Model
+4. Instance Cleanup
