--- a/docs/examples/01.prerequisites.md
+++ b/docs/examples/01.prerequisites.md
@@ -2,20 +2,20 @@
 
 The behavioral and instance layers of the `zitilib` models assume a number of prerequisites to function correctly.
 
-This guide assumes that you're running `fablab` from a Linux (or Unix-like) environment. `fablab` is currently incubating support for execution from Windows hosts, but configuring that is beyond the scope of this guide.
+This guide assumes that you're running `fablab` from a Linux (or Unix-like) environment. `fablab` is currently incubating support for execution from Windows hosts, but configuring that is beyond the scope of this guide. We'll include Windows-specific instructions in a future release.
 
 ## Ziti
 
-First, you'll need a build of Ziti that is compatible with linux environment expressed by the models. You can find a current build of Ziti at the following location:
+First, you'll need a build of Ziti that is compatible with the linux environment expressed by the models (Fedora 30). You can find a current build of Ziti at the following location:
 
 https://netfoundry.jfrog.io/netfoundry/ziti-release/ziti-all/
 
-Extract the Ziti binaries into a folder somewhere on your filesystem. You'll want the binaries to be contained in a `bin/` folder. For example, you might want to put the binaries in `~/ziti/bin`.
+Extract the Ziti binaries into a folder somewhere on your filesystem. Wherever you'd like to site your binaries should contain a `bin/` sub-folder, to contain the binaries. For example, you might want to put the binaries in `~/local/ziti/bin`.
 
-Once you've extracted the binaries, you'll want to `export` a `ZITI_ROOT` environment variable that points ot the parent folder containing the Ziti `bin/`. For example, if I extracted the binaries into `~/ziti/bin`, I would set:
+Once you've extracted the binaries, you'll want to `export` a `ZITI_ROOT` environment variable that points ot the parent folder containing the Ziti `bin/` sub-folder. For example, if I extracted the binaries into `~/local/ziti/bin`, I would set:
 
 ```
-$ export ZITI_ROOT=~/ziti/bin
+$ export ZITI_ROOT=~/local/ziti/bin
 ```
 
 I would recommend also including `ZITI_ROOT/bin` in your `PATH`:
@@ -28,13 +28,17 @@ $ export PATH=$ZITI_ROOT/bin:$PATH
 
 The `zitilib` models all use `terraform` to express their infrastructure. You'll need to have a working `terraform` binary in your path in order to work with these models.
 
+You can find more information about obtaining a working `terraform` build at the `terraform` website:
+
 https://www.terraform.io/
+
+Please make sure that the `terraform` binary is in your shell's `PATH`.
 
 ## Building fablab
 
-Clone a copy of `fablab` into your usual location for cloned repositories. In these instructions, I've clone `fablab` into `~/Repos/nf/fablab`.
+Clone a copy of `fablab` into your usual location for cloned repositories. In these instructions, I've cloned `fablab` into `~/Repos/nf/fablab`.
 
-`fablab` requires a `FABLAB_ROOT` environment variable to be set that points to this cloned repository:
+`fablab` requires that a `FABLAB_ROOT` environment variable is set that points to this cloned repository:
 
 ```
 $ export FABLAB_ROOT=~/Repos/nf/fablab
@@ -44,11 +48,17 @@ Install a copy of `golang`:
 
 https://golang.org/dl/
 
+I typically install `golang` as `~/local/go`.
+
 Make sure `go` is in your `PATH`.
 
-You're going to need to set a `GOPATH` environment variable. `GOPATH` points to the path where the `go` build will download all of the dependencies required to build `fablab`, and will also locate the resulting `fablab` binary.
+```
+$ export PATH=~/local/go/bin:$PATH
+```
 
-I typically use `~/local/fablab` as my `GOPATH` for `fablab`. I also add `~/local/fablab/bin` to my `PATH`, to make `fablab` as convenient to use as possible:
+You're going to need to set a `GOPATH` environment variable in order to build `fablab`. `GOPATH` points to the path where the `go` build will download all of the dependencies required to build `fablab`, and will also contain the resulting `fablab` binary in the `$GOPATH/bin` folder.
+
+I typically use `~/local/fablab` as my `GOPATH` for `fablab`. I also add `$GOPATH/bin` to my `PATH`, to make `fablab` as convenient to use as possible:
 
 ```
 $ export GOPATH=~/local/fablab
@@ -121,16 +131,20 @@ Use "fablab [command] --help" for more information about a command.
 
 ## AWS Access
 
-You'll need AWS credentials that are capable of creating VPCs, instances, and the other items that are necessary to launch an environment on AWS. Make sure you've got your access and secret keys ready.
+You'll need AWS credentials with privileges for creating VPCs, instances, and associated network components that are necessary to launch an environment on AWS. Make sure you've got your access and secret keys ready, as we'll configure them into your environment in a later step.
+
+The models that we'll work with in this guide do not require anything other than the ability to create VPCs and instances. There are no other AWS resource types that are used by these models.
 
 ## SSH Key in AWS
 
 You're going to want to have a named SSH key installed into each region where you plan to site resources. The `zitilib/examples/tiny` model uses the `us-east-1` region by default, so you'll at least need your named SSH key installed in that region.
 
+The larger `zitilib/examples/smartrouting` model creates hosts in multiple regions (`us-east-1`, `us-east-2`, `us-west-1`, and `us-west-2`). If you choose to instantiate and express that model, you'll need to make sure that you've got the same SSH key installed in those regions as well.
+
 You're going to need to be running an `ssh-agent`, and that agent should have your SSH key loaded into it.
 
 ```
-$ ssh-add <path_to_your_key>
+$ ssh-add ~/.ssh/nf-fablab-mquigley
 $ ssh-add -l
 3072 SHA256:Z7tIUW0tNpieeQCBNEm/DLFutTsR/5rCRtZKaViE01k michael@zero-lx.quigley.com (RSA)
 ```
@@ -139,9 +153,9 @@ The `ssh-add -l` command should show the key that you've loaded. If this is not 
 
 ## \~/.fablab/bindings.yml
 
-Once you've got all of the above configured, you're ready to create your `~/.fablab/bindings.yml` file. The `bindings.yml` file is your "user preferences" for working with `fablab` models, and stores necessary configuration details to work with the `zitilib` instances.
+Once you've got all of the above configured, you're ready to create your `~/.fablab/bindings.yml` file. The `bindings.yml` file is your "user preferences" for working with `fablab` models, and we'll configure the necessary settings required to work with the `zitilib` instances.
 
-`~/.fablab/bindings.yml` looks like this:
+`~/.fablab/bindings.yml` is a YAML file, and looks like this:
 
 ```
 environment:      "new_fablab_user"
@@ -157,7 +171,7 @@ credentials:
 
 You'll want to set `environment` to a unique name for your instances and objects in AWS. This is effectively the "name" that is tagged onto the objects created for `fablab` instances from your environment.
 
-Replace the `...` in `access_key` and `secret_key` with your AWS credential components. 
+Replace the `...` in `access_key` and `secret_key` with your AWS key details. 
 
 Replace `mquigley` with the name of the SSH key that you configured into your AWS account in the "SSH Key in AWS" step above. 
 
@@ -165,7 +179,6 @@ Replace `key_path` with the path to your private key file for the SSH key you co
 
 ## Ready
 
-With these prerequisites configured, you should be good to go.
-
+With these prerequisites configured, you should be ready to create and express your first `fablab` model.
 
 Proceed to [Creating an Instance](02.creating.an.instance.md).
