--- a/docs/examples/01.prerequisites.md
+++ b/docs/examples/01.prerequisites.md
@@ -15,7 +15,7 @@ Extract the Ziti binaries into a folder somewhere on your filesystem. Wherever y
 Once you've extracted the binaries, you'll want to `export` a `ZITI_ROOT` environment variable that points ot the parent folder containing the Ziti `bin/` sub-folder. For example, if I extracted the binaries into `~/local/ziti/bin`, I would set:
 
 ```
-$ export ZITI_ROOT=~/local/ziti/bin
+$ export ZITI_ROOT=~/local/ziti
 ```
 
 I would recommend also including `ZITI_ROOT/bin` in your `PATH`:
