--- a/docs/examples/01.prerequisites.md
+++ b/docs/examples/01.prerequisites.md
@@ -32,7 +32,12 @@ You can find more information about obtaining a working `terraform` build at the
 
 https://www.terraform.io/
 
-Please make sure that the `terraform` binary is in your shell's `PATH`.
+Please make sure that the `terraform` binary is in your shell's `PATH`. If your shell is configured correctly, you should see something like the following:
+
+```
+$ terraform version
+Terraform v0.12.21
+```
 
 ## Building fablab
 
@@ -68,7 +73,7 @@ $ export PATH=$GOPATH/bin:$PATH
 With all of that configured, you build `fablab` like this:
 
 ```
-$ cd $GOPATH
+$ cd $FABLAB_ROOT
 $ go install ./...
 ```
 
