--- a/docs/examples/00.index.md
+++ b/docs/examples/00.index.md
@@ -6,5 +6,6 @@ The `zitilib/examples/tiny` model and the `zitilib/examples/smartrouting` model,
 
 1. [Prerequisites](01.prerequisites.md)
 2. [Creating an Instance](02.creating.an.instance.md)
-3. A Tour of the Model
-4. Instance Cleanup
+3. Operating the Instance
+4. A Tour of the Model
+5. Instance Cleanup
