--- a/docs/examples/01.prerequisites.md
+++ b/docs/examples/01.prerequisites.md
@@ -4,6 +4,20 @@ The behavioral and instance layers of the `zitilib` models assume a number of pr
 
 This guide assumes that you're running `fablab` from a Linux (or Unix-like) environment. `fablab` is currently incubating support for execution from Windows hosts, but configuring that is beyond the scope of this guide. We'll include Windows-specific instructions in a future release.
 
+Please make sure that your Linux environment includes a working `rsync` implementation:
+
+```
+michael@zero-lx.quigley.com Wed Mar 04 22:12:34 ~ 
+$ rsync
+rsync  version 3.1.3  protocol version 31
+Copyright (C) 1996-2018 by Andrew Tridgell, Wayne Davison, and others.
+Web site: http://rsync.samba.org/
+Capabilities:
+    64-bit files, 64-bit inums, 64-bit timestamps, 64-bit long ints,
+    socketpairs, hardlinks, symlinks, IPv6, batchfiles, inplace,
+    append, ACLs, xattrs, iconv, symtimes, prealloc
+```
+
 ## Ziti
 
 First, you'll need a build of Ziti that is compatible with the linux environment expressed by the models (Fedora 30). You can find a current build of Ziti at the following location:
