--- a/docs/examples/02.creating.an.instance.md
+++ b/docs/examples/02.creating.an.instance.md
@@ -1,8 +1,8 @@
-# Creating and Instance
+# Creating an Instance
 
 We're going to create an instance of the `zitilib/examples/tiny` model.
 
-The `zitilib/models/examples` package contains 2 different models, `tiny` and `smartrouting`. Both of these examples effectively do the same thing at different scales. They share all of the same behavioral and instance model components, and differ only in how they're constructed structurally: the `tiny` model deploys all of the components of the model on a single host in a single region, and the `smartrouting` model uses 4 regions and 12 hosts, spreading the same workload over a much larger deployment.
+The `zitilib/models/examples` package contains 2 different models, `tiny` and `smartrouting`. Both of these examples effectively do the same thing at different scales. They share all of the same behavioral and instance model components, and differ only in how they're constructed structurally: the `tiny` model deploys all of the components of the model on a single host in a single region, and the `smartrouting` model uses 4 regions and 13 hosts, spreading the same workload over a much larger deployment.
 
 When we start looking at the programming framework provided by `fablab`, we'll use these models to illustrate concepts about how `fablab` enables scalable, extensible operational coding paradigms.
 
