--- a/docs/examples/02.creating.an.instance.md
+++ b/docs/examples/02.creating.an.instance.md
@@ -385,7 +385,20 @@ Our host now has the necessary bits on it, and it can be activated:
 |_|/_/   \_\____/ \___/|_____\___/ \___/|____/(_)_(_)
 ```
 
-Now, we have a working Ziti deployment, which is an expressed version of our `fablab` model. If the environment is configured correctly, we can check out our overlay network using the `ziti-fabric` command:
+Let's see what state our instance is in now:
+
+```
+$ fablab list instances
+
+[1] instances:
+
+first*       zitilib/examples/tiny    [Activated]
+
+```
+
+Awesome... our instance is `Activated`.
+
+Now we have a working Ziti deployment, which is an expressed version of our `fablab` model. If the environment is configured correctly, we can check out our overlay network using the `ziti-fabric` command:
 
 ```
 $ ziti-fabric -i fablab list routers
