--- a/docs/examples/03.operating.the.instance.md
+++ b/docs/examples/03.operating.the.instance.md
@@ -164,3 +164,56 @@ workloads:
 ```
 
 This file describes a pair of `workloads`, one named `chatter`, which both transmits and receives 100 random payloads with a size between 4k and 8k, across 10 clients, for a total of 2000 requests. There is also a `big` workload, which transmits 20 much larger requests.
+
+This scenario runs for a finite amount of requests and usually finishes in about 2 minutes. While the `loop2` scenario is executing the mesh and metrics strategies that were launched continue to receive telemetry from the overlay network. You'll see their log messages throughout the run:
+
+```
+[  15.126]    INFO fablab/zitilib/runlevel/5_operation.(*mesh).interrogate: </=
+[  15.830]    INFO fablab/zitilib/runlevel/5_operation.(*metrics).HandleReceive: <$= [001]
+[  30.157]    INFO fablab/zitilib/runlevel/5_operation.(*mesh).interrogate: </=
+[  30.830]    INFO fablab/zitilib/runlevel/5_operation.(*metrics).HandleReceive: <$= [001]
+[  45.186]    INFO fablab/zitilib/runlevel/5_operation.(*mesh).interrogate: </=
+[  45.830]    INFO fablab/zitilib/runlevel/5_operation.(*metrics).HandleReceive: <$= [001]
+[  60.214]    INFO fablab/zitilib/runlevel/5_operation.(*mesh).interrogate: </=
+[  60.830]    INFO fablab/zitilib/runlevel/5_operation.(*metrics).HandleReceive: <$= [001]
+[  75.239]    INFO fablab/zitilib/runlevel/5_operation.(*mesh).interrogate: </=
+[  75.830]    INFO fablab/zitilib/runlevel/5_operation.(*metrics).HandleReceive: <$= [001]
+```
+
+And finally, our factory wires these 3 `OperatingStage` strategies into the model:
+
+```
+	m.Operation = append(m.Operation, model.OperatingBinders{
+		func(m *model.Model) model.OperatingStage { return fablib_5_operation.Joiner(joiners) },
+		func(m *model.Model) model.OperatingStage { return fablib_5_operation.Closer(closer) },
+		func(m *model.Model) model.OperatingStage { return fablib_5_operation.Persist() },
+	}...)
+```
+
+The first strategy, `Joiner` uses the `joiners` list that we created when wiring in our `LoopDialer` components to wait for all of the `LoopDialer` instances to complete, which they will do when they finish the scenario or exit with an error.
+
+After the run joins with the `LoopDialer`s, it then invokes the `Closer`, which is used to signal the mesh and metrics components to shut down.
+
+And finally, the model will invoke the `Persist` strategy, which causes the runtime state of our instance to be persisted as a `fablab` "dump".
+
+These components produce these log messages:
+
+```
+[  87.579]    INFO fablab/kernel/fablib/runlevel/5_operation.(*joiner).Operate: joined with [1] joiners
+[  87.579]    INFO fablab/kernel/fablib/runlevel/5_operation.(*closer).Operate: closing
+[  87.579]   ERROR ziti-foundation/channel2.(*channelImpl).rxer [ch{mesh}->u{classic}->i{LPvy}]: rx error (short read)
+[  87.580]    INFO fablab/zitilib/runlevel/5_operation.(*mesh).runMesh: exiting
+[  87.580]   ERROR ziti-foundation/channel2.(*channelImpl).rxer [ch{metrics}->u{classic}->i{7n83}]: rx error (short read)
+[  87.580]    INFO fablab/zitilib/runlevel/5_operation.(*metrics).runMetrics: exiting
+[  87.581]    INFO fablab/kernel/fablib/runlevel/5_operation.(*persist).storeDump: dump saved to [/home/michael/.fablab/instances/first/dumps/1583422217144.json]
+```
+
+You can see the joiner and closer components executing, and then two `ERROR` messages from the channels `ch{mesh}->u{classic}->i{LPvy}` and `ch{metrics}->u{classic}->i{7n83}`. These are ignorable errors that result from the normal closure of the management channel connections used to capture mesh and metrics data.
+
+And finally there is a mesage from the persist operation, showing the location of the stored dump. This location is inside of `~/.fablab/instances/first` (the location of the instance data for our `first` instance).
+
+## Done?
+
+Feel free re-execute the `fablab run` command as many times as you like. Subsequent dumps will be saved for each run. Explore the dump files (they're just JSON) and see the data set produced for each run.
+
+When you're ready to dispose of your model, [move on to disposal](04.disposal.md).
