--- a/docs/examples/00.index.md
+++ b/docs/examples/00.index.md
@@ -7,5 +7,4 @@ The `zitilib/examples/tiny` model and the `zitilib/examples/smartrouting` model,
 1. [Prerequisites](01.prerequisites.md)
 2. [Creating an Instance](02.creating.an.instance.md)
 3. Operating the Instance
-4. A Tour of the Model
-5. Instance Cleanup
+4. Disposal
