--- a/docs/examples/00.index.md
+++ b/docs/examples/00.index.md
@@ -4,7 +4,18 @@
 
 The `zitilib/examples/tiny` model and the `zitilib/examples/smartrouting` model, both implement operational Ziti fabric overlays, perform fabric-native operational testing using the `loop2` tool, and provide data sets about mesh configuration and performance metrics.
 
+First, you'll need to make sure you've got all of your prerequisites configured.
+
 1. [Prerequisites](01.prerequisites.md)
+
+Then, we'll take you through creating your first `fablab` model instance.
+
 2. [Creating an Instance](02.creating.an.instance.md)
-3. Operating the Instance
-4. Disposal
+
+We'll use that instance to run a workload.
+
+3. [Operating the Instance](03.operating.the.instance.md)
+
+And then we'll free the resources and clean up your environment.
+
+4. [Disposal](04.disposal.md)
