--- a/docs/examples/01.prerequisites.md
+++ b/docs/examples/01.prerequisites.md
@@ -17,15 +17,17 @@ Capabilities:
     append, ACLs, xattrs, iconv, symtimes, prealloc
 ```
 
+If you do not have an `rsync` binary, install it using your operating system's package management system.
+
 ## Ziti
 
-First, you'll need a build of Ziti that is compatible with the linux environment expressed by the models (Fedora 30). You can find a current build of Ziti at the following location:
+You'll need a build of [Ziti](https://ziti.dev/) that is compatible with the linux environment expressed by the models (Fedora 30). You can find a current build of Ziti at the following location:
 
 https://netfoundry.jfrog.io/netfoundry/ziti-release/ziti-all/
 
-Extract the Ziti binaries into a folder somewhere on your filesystem. Wherever you'd like to site your binaries should contain a `bin/` sub-folder, to contain the binaries. For example, you might want to put the binaries in `~/local/ziti/bin`.
+Extract the Ziti binaries into a folder somewhere on your filesystem. Wherever you'd like to locate your binaries should contain a `bin/` sub-folder. For example, you might want to put the binaries in `~/local/ziti/bin`.
 
-Once you've extracted the binaries, you'll want to `export` a `ZITI_ROOT` environment variable that points ot the parent folder containing the Ziti `bin/` sub-folder. For example, if I extracted the binaries into `~/local/ziti/bin`, I would set:
+Once you've extracted the binaries, you'll need to `export` a `ZITI_ROOT` environment variable that points ot the parent folder containing the Ziti `bin/` sub-folder. For example, if I extracted the binaries into `~/local/ziti/bin`, I would set:
 
 ```
 $ export ZITI_ROOT=~/local/ziti
@@ -36,6 +38,8 @@ I would recommend also including `ZITI_ROOT/bin` in your `PATH`:
 ```
 $ export PATH=$ZITI_ROOT/bin:$PATH
 ```
+
+_If you add these to your `~/.bashrc` or other shell startup file, you can easily open multiple shells to interact with your `fablab` models._
 
 ## Terraform
 
@@ -54,9 +58,9 @@ Terraform v0.12.21
 
 ## Building fablab
 
-Clone a copy of `fablab` into your usual location for cloned repositories. In these instructions, I've cloned `fablab` into `~/Repos/nf/fablab`.
+Clone a copy of [`fablab`](https://github.com/netfoundry/fablab) into your usual location for cloned repositories. In these instructions, I've cloned `fablab` into `~/Repos/nf/fablab`.
 
-`fablab` requires that a `FABLAB_ROOT` environment variable is set that points to this cloned repository:
+`fablab` requires that a `FABLAB_ROOT` environment variable is set that points to the location of your cloned repository:
 
 ```
 $ export FABLAB_ROOT=~/Repos/nf/fablab
@@ -82,6 +86,8 @@ I typically use `~/local/fablab` as my `GOPATH` for `fablab`. I also add `$GOPAT
 $ export GOPATH=~/local/fablab
 $ export PATH=$GOPATH/bin:$PATH
 ```
+
+_You might consider adding these environment variables to your `~/.bashrc` or other shell startup document, so you can easily open new shells for working with `fablab`._
 
 With all of that configured, you build `fablab` like this:
 
