--- a/docs/examples/02.creating.an.instance.md
+++ b/docs/examples/02.creating.an.instance.md
@@ -4,7 +4,7 @@ We're going to create an instance of the `zitilib/examples/tiny` model.
 
 The `zitilib/models/examples` package contains 2 different models, `tiny` and `smartrouting`. Both of these examples effectively do the same thing at different scales. They share all of the same behavioral and instance model components, and differ only in how they're constructed structurally: the `tiny` model deploys all of the components of the model on a single host in a single region, and the `smartrouting` model uses 4 regions and 13 hosts, spreading the same workload over a much larger deployment.
 
-When we start looking at the programming framework provided by `fablab`, we'll use these models to illustrate concepts about how `fablab` enables scalable, extensible operational coding paradigms.
+When we start looking at the programming framework provided by `fablab`, we'll use these models to illustrate concepts about how `fablab` enables scalable, extensible operational coding paradigms; build behavioral models once, and use them with structural models of differing shapes and sizes.
 
 ## Checking Your Environment
 
@@ -234,10 +234,9 @@ commands will detect it and remind you to do so if necessary.
 
 The first thing that `fablab` will do is move the instance from the `Created` to the `Infrastructure` stage, invoking the lifecycle stage components to express the model. In the case of the `zitilib/examples/tiny` model, `fablab` is invoking `terraform` to express the model's infrastructure into AWS.
 
-There will be quite a lot of output from `terraform`, as it walks the created instance through installation and update of the latest packages from the operating system repository. By default the model expresses a `t2.micro` instance, which also takes a decent amount of time (as of this writing) to execute.
+There will be quite a lot of output from `terraform`, as it takes the created instance through installation and update of the latest packages from the operating system repository. By default the model expresses a `t2.micro` instance, which requires time to fully instantiate.
 
-Ultimately, `terraform` should get to a point where it's completed, and `fablab` waits for the host to restart:
-
+Ultimately, `terraform` should get to a point where it's completed: 
 ```
 
 Apply complete! Resources: 7 added, 0 changed, 0 destroyed.
@@ -251,6 +250,10 @@ tiny_host_001_public_ip = 54.164.129.148
 [ 337.999]    INFO fablab/kernel/fablib.(*Process).Run: executing [terraform output tiny_host_001_private_ip]
 [ 338.032]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/terraform.(*terraform).bind: set private ip [10.0.0.74] for [tiny/001]
 [ 338.032]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/semaphore.(*restartStage).Express: waiting for expressed hosts to restart (pre-delay: 1m30s)
+```
+...and `fablab` waits for the host to restart:
+
+```
  428.032]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/semaphore.(*restartStage).Express: starting restart checks
 [ 428.033]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'uptime'
 [ 460.641]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/semaphore.(*restartStage).Express: 03:11:57 up 0 min,  0 users,  load average: 0.25, 0.06, 0.02
@@ -416,4 +419,6 @@ Id           | Binding      | Destination
 001          | transport    | 001          -> tcp:10.0.0.74:8171
 ```
 
-Congratulations, you've got a working `fablab` model. Proceed to [Operating the Instance](03.operating.the.instance.md).
+## Next...
+
+Congratulations, you've got a working `fablab` model! Proceed to [Operating the Instance](03.operating.the.instance.md).
