--- a/docs/examples/02.creating.an.instance.md
+++ b/docs/examples/02.creating.an.instance.md
@@ -249,12 +249,13 @@ tiny_host_001_public_ip = 54.164.129.148
 [ 337.999]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/terraform.(*terraform).bind: set public ip [54.164.129.148] for [tiny/001]
 [ 337.999]    INFO fablab/kernel/fablib.(*Process).Run: executing [terraform output tiny_host_001_private_ip]
 [ 338.032]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/terraform.(*terraform).bind: set private ip [10.0.0.74] for [tiny/001]
-[ 338.032]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/semaphore.(*restartStage).Express: waiting for expressed hosts to restart (pre-delay: 1m30s)
+
 ```
 ...and `fablab` waits for the host to restart:
 
 ```
- 428.032]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/semaphore.(*restartStage).Express: starting restart checks
+[ 338.032]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/semaphore.(*restartStage).Express: waiting for expressed hosts to restart (pre-delay: 1m30s) 
+[ 428.032]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/semaphore.(*restartStage).Express: starting restart checks
 [ 428.033]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'uptime'
 [ 460.641]    INFO fablab/kernel/fablib/runlevel/0_infrastructure/semaphore.(*restartStage).Express: 03:11:57 up 0 min,  0 users,  load average: 0.25, 0.06, 0.02
 ```
