--- a/docs/examples/03.operating.the.instance.md
+++ b/docs/examples/03.operating.the.instance.md
@@ -1,6 +1,6 @@
 # Operating the Instance
 
-With our instance `Activated` in the [previous step](02.creating.an.instance.md), we can run the operational workloads the model was designed to facilitate. Those operational workloads are inserted into the model as `model.OperatingStage` strategies, which are invoked when we as `fablab` to `run` the instance:
+With our instance `Activated` in the [previous step](02.creating.an.instance.md), we can run the operational workloads the model was designed to facilitate. Those operational workloads are inserted into the model as `model.OperatingStage` strategies, which are invoked when we `fablab run` the instance:
 
 ```
 $ fablab run
@@ -31,13 +31,11 @@ $ fablab run
 [  87.581]    INFO fablab/kernel/fablib/runlevel/5_operation.(*persist).storeDump: dump saved to [/home/michael/.fablab/instances/first/dumps/1583422217144.json]
 ```
 
-Let's break down what's happening through this `run`.
-
 We'll explain `fablab` model programming in more detail in a subsequent section, but we'll use snippets of code from this model to explain what's happening. We'll specifically be looking at the code in the file:
 
 `zitilib/models/examples/operation.go`
 
-The code in this file implements a `model.Factory`, which is invoked by `fablab` to create the `model.OperatingStage` components that get inserted into the model, so that when `fablab run` is invoked, each of those components will be executed in order to perform the workload. Again, in this case, we're capturing metrics and mesh data, while executing a `loop2` (a `ziti-fabric`-specific testing facility) testing scenario.
+The code in this file implements a `model.Factory`, which is invoked by `fablab` to create the `model.OperatingStage` components that get inserted into the model, so that when `fablab run` is invoked, each of those components will be executed in order to perform the workload. Again, in this case, we're capturing metrics and mesh data, while executing a `loop2` testing scenario. `loop2` is a performance and correctness testing tool for the Ziti overlay fabric.
 
 The main entry point into the `model.Factory` is this function:
 
@@ -109,7 +107,7 @@ Our factory then wires up a delay of 5 seconds:
 [   0.867]    INFO fablab/kernel/fablib/runlevel/5_operation.(*timer).Operate: waiting for 5s
 ```
 
-If you're being observant, you'll notice that even though the listeners were wired into the operating stage before the `Timer`, the `Timer` log message appears first. This is because the `LoopListener` strategies are threaded, and start executing ever so slightly later than the `Timer`. This is part of why we need to deal with synchronization.
+If you're being observant, you'll notice that even though the listeners were wired into the operating stage before the `Timer`, the `Timer` log message appears first. This is because the `LoopListener` strategies are threaded, and start executing ever so slightly later than the `Timer`. This is part of why we need to deal with synchronization: `fablab` supports many concurrent processes that support distributed environments and workloads.
 
 Next, the `loop2 dialers` are wired into the model:
 
@@ -122,7 +120,9 @@ joiners = append(joiners, dialerJoiners...)
 m.Operation = append(m.Operation, dialers...)
 ```
 
-In this case, we're adding to a collection of `joiners`. We'll see why in a second. When the `run` stage executes, the output from our dialers looks like this:
+In this case, we're adding to a collection of `joiners`. We'll explain why shortly.
+
+When the `run` stage executes, the output from our dialers looks like this:
 
 ```
 [   6.296]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: '/home/fedora/fablab/bin/ziti-fabric-test loop2 dialer /home/fedora/fablab/cfg/10-ambient.loop2.yml -e tls:54.164.129.148:7002 -s 001 >> /home/fedora/logs/loop2-dialer-1583422217144.log 2>&1'
@@ -163,9 +163,9 @@ workloads:
       rxTimeout:        30000
 ```
 
-This file describes a pair of `workloads`, one named `chatter`, which both transmits and receives 100 random payloads with a size between 4k and 8k, across 10 clients, for a total of 2000 requests. There is also a `big` workload, which transmits 20 much larger requests.
+This file describes a pair of `workloads`. The first workload is named `chatter`, and it both transmits and receives 100 random payloads with a size between 4k and 8k, across 10 clients, for a total of 2000 requests. There is also a `big` workload, which transmits 20 payloads of a much larger size.
 
-This scenario runs for a finite amount of requests and usually finishes in about 2 minutes. While the `loop2` scenario is executing the mesh and metrics strategies that were launched continue to receive telemetry from the overlay network. You'll see their log messages throughout the run:
+This scenario runs for a finite amount of requests and usually finishes in about 2 minutes (on `t2.micro`). While the `loop2` scenario is executing the mesh and metrics strategies that were launched continue to receive telemetry from the overlay network. You'll see their log messages throughout the run:
 
 ```
 [  15.126]    INFO fablab/zitilib/runlevel/5_operation.(*mesh).interrogate: </=
@@ -180,7 +180,9 @@ This scenario runs for a finite amount of requests and usually finishes in about
 [  75.830]    INFO fablab/zitilib/runlevel/5_operation.(*metrics).HandleReceive: <$= [001]
 ```
 
-And finally, our factory wires these 3 `OperatingStage` strategies into the model:
+The `</=` messages are mesh updates, and the `<$=` messages are metrics data being received from a Ziti router.
+
+Finally, our factory wires these 3 `OperatingStage` strategies into the model:
 
 ```
 m.Operation = append(m.Operation, model.OperatingBinders{
@@ -192,9 +194,11 @@ m.Operation = append(m.Operation, model.OperatingBinders{
 
 The first strategy, `Joiner` uses the `joiners` list that we created when wiring in our `LoopDialer` components to wait for all of the `LoopDialer` instances to complete, which they will do when they finish the scenario or exit with an error.
 
+_The joiner is a golang `chan`, which the `LoopDialer` `close`s when it's finished. The `Joiner` waits for all of these `chan` instances to close before proceeding._
+
 After the run joins with the `LoopDialer`s, it then invokes the `Closer`, which is used to signal the mesh and metrics components to shut down.
 
-And finally, the model will invoke the `Persist` strategy, which causes the runtime state of our instance to be persisted as a `fablab` "dump".
+And finally, the model will invoke the `Persist` strategy, which causes the runtime state of our instance to be persisted as a `fablab` "dump" (a JSON representation of the model state).
 
 These components produce these log messages:
 
