--- a/docs/examples/01.prerequisites.md
+++ b/docs/examples/01.prerequisites.md
@@ -21,29 +21,53 @@ If you do not have an `rsync` binary, install it using your operating system's p
 
 ## Ziti
 
-You'll need a build of [Ziti](https://ziti.dev/) that is compatible with the linux environment expressed by the models (Fedora 30). You can find a current build of Ziti at the following location:
+You will need [Ziti](https://ziti.dev/) binaries, possibly two different sets, depending on the type of operating system you are running `fablab` on.  These sets are:
+
+- a build of [Ziti](https://ziti.dev/) that is compatible with the linux environment expressed by the models (Fedora 30 Linux). 
+- a build of [Ziti](https://ziti.dev/) that is compatible with the operating system you are running `fablab` from (i.e. Mac, Windows, or Linux).
+
+
+You can find a current build of Ziti at the following location:
 
 https://netfoundry.jfrog.io/netfoundry/ziti-release/ziti-all/
 
-Extract the Ziti binaries into a folder somewhere on your filesystem. Wherever you'd like to locate your binaries should contain a `bin/` sub-folder. For example, you might want to put the binaries in `~/local/ziti/bin`.
+Extract the Ziti binaries for the operating system you are running `fablab` from into a folder somewhere on your filesystem. Wherever you'd like to locate your binaries should contain a `bin/` sub-folder. For example, you might want to put the binaries in `~/local/ziti/bin`.
 
-Once you've extracted the binaries, you'll need to `export` a `ZITI_ROOT` environment variable that points ot the parent folder containing the Ziti `bin/` sub-folder. For example, if I extracted the binaries into `~/local/ziti/bin`, I would set:
+Once you've extracted the binaries, you'll need to `export` a `ZITI_ROOT` environment variable that points ot the parent folder containing the Ziti `bin/` sub-folder. For example, if you extracted the binaries into `~/local/ziti/bin`, you should set:
 
 ```
 $ export ZITI_ROOT=~/local/ziti
 ```
 
-I would recommend also including `ZITI_ROOT/bin` in your `PATH`:
+It is recommended that you also include `ZITI_ROOT/bin` in your `PATH`:
 
 ```
 $ export PATH=$ZITI_ROOT/bin:$PATH
 ```
 
-_If you add these to your `~/.bashrc` or other shell startup file, you can easily open multiple shells to interact with your `fablab` models._
+When `fablab` executes, it will exec certain Ziti cmds (e.g. to generate a PKI) so the above setup is necessary to enable `fablab` to successfully locate the Ziti components.
+
+If you are running `fablab` from a Linux system, you may skip the rest of this section and continue with Terraform setup.
+
+If you are running `fablab` from a Mac or Windows system, you should now extract the Ziti binaries for the Linux operating system into a folder somewhere on your filesystem. Just like the above, wherever you'd like to locate your binaries should contain a `bin/` sub-folder. 
+For example, you might want to put the binaries in `~/local/ziti-linux/bin`.
+
+Once you've extracted the binaries, you'll need to `export` a `ZITI_DIST_ROOT` environment variable that points to the parent folder containing the Ziti `bin/` sub-folder. For example, if you extracted the Linux binaries into `~/local/ziti-linux/bin`, you should set:
+
+```
+$ export ZITI_DIST_ROOT=~/local/ziti-linux
+```
+
+
+_If you add these environment variables to your `~/.bashrc` or other shell startup file, you can easily open multiple shells to interact with your `fablab` models._
 
 ## Terraform
 
 The `zitilib` models all use `terraform` to express their infrastructure. You'll need to have a working `terraform` binary in your path in order to work with these models.
+
+```
+NOTE: fablab requires terraform version 0.12 or newer. It will not operate correctly with terraform version 0.11 or older.
+```
 
 You can find more information about obtaining a working `terraform` build at the `terraform` website:
 
