fix kitting and bootstrap

--- a/docs/examples/02.creating.an.instance.md
+++ b/docs/examples/02.creating.an.instance.md
@@ -416,8 +416,8 @@ $ ziti-fabric -i fablab list services
 
 Services: (1)
 
-Id           | Binding      | Destination
-001          | transport    | 001          -> tcp:10.0.0.74:8171
+Id           | Terminator Strategy | Destination(s)
+loop         | smartrouting        | 001 -> tcp:10.0.0.54:8171
 ```
 
 ## Next...
