Initial migration from Fedora 30 to Ubuntu 20.04 LTS. (#100)

--- a/docs/examples/01.prerequisites.md
+++ b/docs/examples/01.prerequisites.md
@@ -23,7 +23,7 @@ If you do not have an `rsync` binary, install it using your operating system's p
 
 You will need [Ziti](https://ziti.dev/) binaries, possibly two different sets, depending on the type of operating system you are running `fablab` on.  These sets are:
 
-- a build of [Ziti](https://ziti.dev/) that is compatible with the linux environment expressed by the models (Fedora 30 Linux). 
+- a build of [Ziti](https://ziti.dev/) that is compatible with the linux environment expressed by the models (Ubuntu 20.04 LTS). 
 - a build of [Ziti](https://ziti.dev/) that is compatible with the operating system you are running `fablab` from (i.e. Mac, Windows, or Linux).
 
 
@@ -214,7 +214,7 @@ credentials:
     ssh_key_name: "mquigley"
   ssh:
     key_path:     "/home/michael/.ssh/nf-fablab-michael"
-    username:   "fedora"
+    username:     "ubuntu"
 ```
 
 You'll want to set `environment` to a unique name for your instances and objects in AWS. This is effectively the "name" that is tagged onto the objects created for `fablab` instances from your environment.
