--- a/docs/examples/02.creating.an.instance.md
+++ b/docs/examples/02.creating.an.instance.md
@@ -326,8 +326,8 @@ After the kit is constructed, it is pushed out to our host using `rsync`:
 [ 471.187]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'mkdir -p logs'
 ...
 [ 472.418]    INFO fablab/kernel/fablib/runlevel/3_distribution.(*locations).Distribute: 54.164.129.148 => logs
-[ 472.418]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'mkdir -p /home/fedora/fablab'
-[ 472.827]    INFO fablab/kernel/fablib.(*Process).Run: executing [rsync -avz -e ssh -i /home/michael/.ssh/nf-fablab-michael -o StrictHostKeyChecking=no --delete /home/michael/.fablab/instances/first/kit/ fedora@54.164.129.148:/home/fedora/fablab]
+[ 472.418]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'mkdir -p /home/ubuntu/fablab'
+[ 472.827]    INFO fablab/kernel/fablib.(*Process).Run: executing [rsync -avz -e ssh -i /home/michael/.ssh/nf-fablab-michael -o StrictHostKeyChecking=no --delete /home/michael/.fablab/instances/first/kit/ ubuntu@54.164.129.148:/home/ubuntu/fablab]
 Warning: Permanently added '54.164.129.148' (ECDSA) to the list of known hosts.
 sending incremental file list
 ./
@@ -362,25 +362,25 @@ Our host now has the necessary bits on it, and it can be activated:
                                      |   
 [ 487.881]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'ps ax'
 [ 488.351]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'rm -f ~/ctrl.db'
-[ 488.753]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'nohup /home/fedora/fablab/bin/ziti-controller --log-formatter pfxlog run /home/fedora/fablab/cfg/ctrl.yml > logs/ziti-controller.log 2>&1 &'
+[ 488.753]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'nohup /home/ubuntu/fablab/bin/ziti-controller --log-formatter pfxlog run /home/ubuntu/fablab/cfg/ctrl.yml > logs/ziti-controller.log 2>&1 &'
 [ 489.165]    INFO fablab/kernel/fablib/actions/semaphore.(*sleep).Execute: sleeping for [2s]
 [ 491.166]    INFO fablab/zitilib/actions.(*fabric).Execute: [/home/michael/local/ziti/bin/ziti-fabric create router /home/michael/.fablab/instances/first/pki/intermediate/certs/001-client.cert -i fablab]
 [ 491.297]    INFO fablab/zitilib/actions.(*fabric).Execute: out:[success], err:[]
 [ 491.297]    INFO fablab/zitilib/actions.(*fabric).Execute: [/home/michael/local/ziti/bin/ziti-fabric create service 001 tcp:10.0.0.74:8171 001 -i fablab]
 [ 491.421]    INFO fablab/zitilib/actions.(*fabric).Execute: out:[success], err:[]
-[ 491.422]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'mkdir -p /home/fedora/.ziti'
-[ 491.832]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'rm -f /home/fedora/.ziti/identities.yml'
-[ 492.241]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'ln -s /home/fedora/fablab/cfg/remote_identities.yml /home/fedora/.ziti/identities.yml'
+[ 491.422]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'mkdir -p /home/ubuntu/.ziti'
+[ 491.832]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'rm -f /home/ubuntu/.ziti/identities.yml'
+[ 492.241]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'ln -s /home/ubuntu/fablab/cfg/remote_identities.yml /home/ubuntu/.ziti/identities.yml'
 [ 492.647]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'ps ax'
-[ 493.077]    INFO fablab/kernel/fablib.RemoteKillFilter: line [  893 ?        Sl     0:00 /home/fedora/fablab/bin/ziti-controller --log-formatter pfxlog run /home/fedora/fablab/cfg/ctrl.yml]
+[ 493.077]    INFO fablab/kernel/fablib.RemoteKillFilter: line [  893 ?        Sl     0:00 /home/ubuntu/fablab/bin/ziti-controller --log-formatter pfxlog run /home/ubuntu/fablab/cfg/ctrl.yml]
 [ 493.078]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'sudo kill 893'
                                
  _. __|_o _ ._ o  __|_ _..__|_ 
 (_|(_ |_|(_)| |o _> |_(_||  |_ 
                                
-[ 493.603]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'nohup /home/fedora/fablab/bin/ziti-controller --log-formatter pfxlog run /home/fedora/fablab/cfg/ctrl.yml > logs/ziti-controller.log 2>&1 &'
+[ 493.603]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'nohup /home/ubuntu/fablab/bin/ziti-controller --log-formatter pfxlog run /home/ubuntu/fablab/cfg/ctrl.yml > logs/ziti-controller.log 2>&1 &'
 [ 494.014]    INFO fablab/kernel/fablib/actions/semaphore.(*sleep).Execute: sleeping for [2s]
-[ 496.015]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'nohup /home/fedora/fablab/bin/ziti-router --log-formatter pfxlog run /home/fedora/fablab/cfg/001.yml > logs/ziti-router.log 2>&1 &'
+[ 496.015]    INFO fablab/kernel/fablib.RemoteExec: executing [54.164.129.148:22]: 'nohup /home/ubuntu/fablab/bin/ziti-router --log-formatter pfxlog run /home/ubuntu/fablab/cfg/001.yml > logs/ziti-router.log 2>&1 &'
 [ 496.425]    INFO fablab/kernel/fablib/actions/semaphore.(*sleep).Execute: sleeping for [2s]
  _____ _    ____  _   _ _     ___  _   _ ____  _ _ _ 
 |  ___/ \  | __ )| | | | |   / _ \| | | / ___|| / | |
